replacing absolute paths in the test